# adventofcode24

./: pyproject.toml
adventofcode24/01/: 01.py
adventofcode24/02/: 02.py
adventofcode24/03/: 03.py
adventofcode24/04/: 04.in  04.py
adventofcode24/05/: 05.in  05.py
adventofcode24/06/: 06.in  06.py
adventofcode24/07/: 07.py
adventofcode24/08/: 08.py
adventofcode24/09/: 09.py
adventofcode24/10/: 10.py
adventofcode24/11/: 11.py
adventofcode24/12/: 12.py
adventofcode24/utils/: io.py
