[tool.poetry]
name = "adventofcode24"
version = "0.0.1"
description = "Repo hosting my Advent of Code 2024 puzzle entries"
authors = ["Job Ammerlaan <job.ammerlaan@riviq.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.dev-dependencies]
pandas = "^2.0.0"
numpy = "^1.23.5"
parse = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
